fix: исправлены ошибки перед отправкой на ревью

--- a/src/components/AccountButton/AccountButton.css
+++ b/src/components/AccountButton/AccountButton.css
@@ -15,6 +15,9 @@
   padding: 9px 20px 0 11px;
   margin: 0;
 }
+.account-button:hover {
+  opacity: 0.8;
+}
 .account-button:visited {
   color: #000;
 }
