--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,11 +1,8 @@
 .about-me {
-  position: relative;
-  padding: 110px 0 125px;
+  padding: 110px 0 200px;
 }
 .about-me__photo {
-  display: block;
   border-radius: 10px;
-  object-fit: contain;
   width: 270px;
   float: right;
   margin: 66px 0 0 50px;
@@ -19,39 +16,30 @@
   margin: 66px 0 0;
 }
 .about-me__profession {
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-size: 12px;
+  font-size: 18px;
   font-style: normal;
   font-weight: 500;
-  line-height: 18px; /* 150% */
+  line-height: 20px;
   margin: 18px 0 26px;
 }
 .about-me__desc {
-  font-feature-settings: 'clig' off, 'liga' off;
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 22px; /* 157.143% */
   max-width: 600px;
-  min-height: calc(88px + 99px);
+  min-height: 185px;
   margin: 0;
-
 }
 .about-me__git {
   font-size: 14px;
-  font-style: normal;
   font-weight: 500;
-  line-height: normal;
-  display: inline-block;
   margin: 0;
 }
 .about-me__portfolio-title {
-  font-feature-settings: 'clig' off, 'liga' off;
+  color: #A0A0A0;
   font-size: 18px;
-  font-style: normal;
   font-weight: 400;
   line-height: 20px; /* 111.111% */
-  color: #A0A0A0;
   margin: 101px 0 50px 0;
 }
 .about-me__portfolio {
@@ -77,6 +65,10 @@
   background-position: right 7px top 15px;
   background-size: 20px;
 }
+.about-me__portfolio-item > a {
+  display: block;
+  width: 100%;
+}
 .about-me__portfolio-item:last-child {
   border-bottom: none;
   padding: 0;
@@ -88,8 +80,6 @@
   }
   .about-me__photo {
     width: 255px;
-    right: 50px;
-    top: 207px;
   }
   .about-me__name {
     font-size: 40px;
@@ -97,6 +87,8 @@
     letter-spacing: -1.6px;
   }
   .about-me__profession {
+    font-size: 12px;
+    line-height: 18px;
     margin: 16px 0 20px;
   }
   .about-me__desc {
@@ -105,32 +97,22 @@
     max-width: calc(100% - 255px - 49px);
     min-height: calc(108px + 87px);
   }
-  .about-me__git {
-
-  }
   .about-me__portfolio-title {
-    margin: 91px 0 50px 0;
+    margin: 91px 0 45px 0;
   }
   .about-me__portfolio-item {
     font-size: 28px;
     letter-spacing: -1.12px;
-
   }
-
 }
 @media screen and (max-width:550px) {
   .about-me {
-    padding: 70px 0;
-  }
-  .about-me__about {
-    display: flex;
-    flex-direction: column;
-    margin: 60px 0 70px;
+    padding: 70px 0 150px;
   }
   .about-me__photo {
-    position: static;
     width: 100%;
     margin: 60px 0 0;
+    float: none;
   }
   .about-me__name {
     font-size: 30px;
@@ -165,5 +147,4 @@
     background-size: 10px;
     background-position: right 3px top 10px;
   }
-
 }
