--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,41 +1,30 @@
 .footer {
-  width: 100vw;
-  padding: 79px calc((100vw - 100%)/2) 20px;
-  margin: 0 0 0 calc((100vw - 100%)/-2);
+  font-size: 13px;
+  font-feature-settings: 'clig' off, 'liga' off;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: #000;
+
+  width: 100%;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 .footer__desc {
   color: #A0A0A0;
   text-align: center;
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
   border-bottom: 1px solid #E8E8E8;
   padding-bottom: 20px;
   margin: 0;
 }
 .footer__bottom {
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
   display: flex;
   justify-content: space-between;
   margin: 20px 0 0 0;
 }
-.footer__copyright {
-  color: #000;
-  font-feature-settings: 'clig' off, 'liga' off;
-  font-size: 13px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  margin: 0;
-}
-.footer_links {
+
+.footer__links {
   display: flex;
   gap: 20px;
 }
@@ -44,29 +33,26 @@
 
 }
 @media screen and (max-width:550px) {
+  .footer {
+    font-size: 12px;
+  }
   .footer__bottom {
     flex-direction: column-reverse;
     align-items: center;
     gap: 30px;
   }
-
-  .footer_links{
+  .footer__links {
     flex-direction: column;
-    align-items: center;
+    text-align: center;
     gap: 12px;
   }
-
   .footer__link {
     padding: 0;
   }
   .footer__copyright {
-    font-size: 12px;
     color: #A0A0A0;
   }
   .footer__bottom {
     margin: 30px 0 0 0;
-  }
-  .footer__desc {
-    font-size: 12px;
   }
 }
