--- a/src/components/MobileMenu/MobileMenu.css
+++ b/src/components/MobileMenu/MobileMenu.css
@@ -12,30 +12,35 @@
   height: 0;
   visibility: hidden;
   z-index: 1;
-  transition: height 1s ease-in-out;
   top: 0;
-  right: 0;
-}
-.mobile-menu_opened {
-  visibility: visible;
+  left: 0;
+  opacity: 0;
+  transition: visibility 1s linear, opacity 1s linear;
   width: 100vw;
   height: 100vh;
 }
+.mobile-menu_opened {
+  visibility: visible;
+  opacity: 1;
+}
 .mobile-menu__container {
+  position: absolute;
+  right: -100%;
+  transition: right 1s ease-in-out;
   display: flex;
   flex-direction: column;
   align-items: center;
 
-  padding: 159px 0 90px;
+  padding: 160px 0 90px;
   box-sizing: border-box;
   gap: 28px;
   width: 100%;
   height: 100%;
-
   max-width: 520px;
   background-color: #FFF;
-
-  margin: 0 0 0 auto;
+}
+.mobile-menu__container_opened {
+  right: 0;
 }
 .mobile-menu__active {
   text-decoration: underline;
@@ -52,6 +57,19 @@
   background-color: #FFF;
   padding: 0;
   position: absolute;
-  right: 13px;
-  top: 13px;
+  right: 20px;
+  top: 20px;
+}
+@media screen and (max-width:550px) {
+  .mobile-menu__container {
+    padding: 145px 0 45px;
+    gap: 25px;
+  }
+  .mobile-menu__close-button {
+    right: 13px;
+    top: 13px;
+  }
+  .mobile-menu__active {
+    text-underline-offset: 11px;
+  }
 }
