--- a/src/components/PageAuth/PageAuth.css
+++ b/src/components/PageAuth/PageAuth.css
@@ -18,9 +18,11 @@
   gap: 6px;
   margin: 16px auto 0;
 }
-
 .page-auth__form {
   flex-grow: 1;
+}
+.page-auth__form button{
+  margin-top: auto;
 }
 
 @media screen and (max-width:1024px) {
