--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -69,7 +69,6 @@
     height: 57px;
   }
 }
-
 @media screen and (max-width:550px) {
   .techs {
     padding-top: 70px;
@@ -82,14 +81,14 @@
     margin: 60px 0 24px;
   }
   .techs__about {
-    font-size: 11px;        ;
+    font-size: 11px;
     line-height: 16px; /* 145.455% */
     letter-spacing: -0.44px;
     max-width: 292px;
     margin: 24px 0 50px;
   }
   .techs__list {
-    max-width: 95%;
+    max-width: 90%;
     display: grid;
     grid-template-columns: repeat(auto-fill, 84px);
   }
