--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -79,7 +79,9 @@
     padding: 90px 0 170px;
   }
   .about-me__photo {
-    width: 255px;
+    /* Пропорциональное уменьшение изображения от 255 до 200 */
+    width: calc(255px - (255 - 200)* (768px - 100vw)/(768 - 550));
+    max-width: 270px;
   }
   .about-me__name {
     font-size: 40px;
@@ -94,7 +96,7 @@
   .about-me__desc {
     font-size: 12px;
     line-height: 18px;
-    max-width: calc(100% - 255px - 49px);
+    max-width: 100%;
     min-height: calc(108px + 87px);
   }
   .about-me__portfolio-title {
@@ -111,6 +113,7 @@
   }
   .about-me__photo {
     width: 100%;
+    max-width: 100%;
     margin: 60px 0 0;
     float: none;
   }
