--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,6 @@
   color: #FFF;
   font-size: 13px;
   line-height: 18px;
-
   background-color: #073042;
   display: flex;
   height: 74px;
@@ -10,13 +9,10 @@
   width: 100%;
   justify-content: space-between;
   align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 1;
+  width: 100%;
+  padding: 0;
+  margin: 0;
 
-  width: 100vw;
-  padding: 0 calc((100vw - 100%)/2);
-  margin: 0 0 0 calc((100vw - 100%)/-2);
 }
 .header_theme_light {
   color: #000;
