--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -8,9 +8,9 @@
     "subtitle image"
     "button ."
   ;
-  padding: 75px calc((100vw - 100%)/2) ;
-  width: 100vw;
-  margin: 0 0 0 calc((100vw - 100%)/-2);
+  padding: 75px 0;
+  width: 100%;
+  margin: 0;
   box-sizing: border-box;
 }
 .promo__img {
@@ -69,7 +69,6 @@
     font-size: 40px;
     line-height: 50px;
     margin: 48px 0 22px 0;
-    max-width: 80%;
     text-align: center;
   }
   .promo__subtitle {
@@ -87,7 +86,7 @@
 
 @media screen and (max-width:550px) {
   .promo {
-    padding: 70px 10px 30px;
+    padding: 70px 0 30px;
   }
   .promo__title{
     font-size: 30px;
