--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -5,17 +5,18 @@
   width: 100%;
 }
 
-.form__error {
+.form__error input{
   color: #FF3055;
 }
 .form__error-msg {
   color: #FF3055;
   font-size: 10px;
-  display: none;
+  display: block;
   padding-top: 6px;
 }
-.form__error-msg_visible {
-  display: inline;
+.form__error_position_submit {
+  text-align: center;
+  margin: 10px;
 }
 .form__fieldset {
   margin: 0;
